# CourseNFO

./: .gitignore  README.md  README_DE.md  README_EN.md  README_ES.md  README_JA.md  README_ZH_TW.md  config.json  course_batch_finder_task.md  create_test_env.py  main.py  pyproject.toml  requirements.txt  single_file_course_task.md  test_path.py  test_tags.py
.github/workflows/: build.yml
docs/: icon.icns  prd.md  影视中心本地nfo文件命名规范.md  短剧.md  课程目录格式分类.md
src/: __init__.py
src/core/: batch_nfo_generator.py  course_batch_finder.py  course_types.py  nfo.py  scanner.py  single_course_finder.py  single_nfo_generator.py  tags.py
src/gui/: course_batch_nested_tab.py  course_batch_tab.py  dialogs.py  main_window.py  nfo_batch.py  nfo_edit.py  nfo_gen.py  nfo_type4.py  nomedia.py  short_drama_nfo.py  single_course_tab.py  variety_nfo.py  variety_nfo_manual.py
src/utils/: config.py  poster.py
测试目录/后端/C#/完整的C#大师课程 Complete C# Masterclass[普通话]/: lession
